--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "react": "^19.0.0",
